made a second component

--- a/www/hello.html
+++ b/www/hello.html
@@ -1,5 +1,4 @@
-<div class="">
-  <p>
-      this is a partial!!!!!
-  </p>
+
+<div id="hello-view">
+  <p>Compoment partial from hello.html</p>
 </div>
